cloudformation-day-6/outputs/componentization/security-group/security-groups.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: This template provisions the webserver and database secyrity groups
Metadata:  {}

Parameters:
  DevWebserverSGGN:
    Description: Please provide your Devwebserver  group name
    Type: String
    Default: DevWebserverSGGN

  DevWebserverSGGD:
    Description: Enabling SSh and HTTP
    Type: String
    Default: DevWebserverSGGD

  DevDBserverSGGN:
    Description: Please provide your DevDBserver  group name
    Type: String
    Default: DevDBserverSGGN

  DevDBserverSGGD:
    Description: Enabling MySQL
    Type: String
    Default: DevDBserverSGGD

Mappings: {}

Conditions: {}

Resources: 
# Webserver security group
  DevWebserverSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref DevWebserverSGGN
      GroupDescription: !Ref DevWebserverSGGD
      VpcId: !ImportValue DevVPCId #this will import the exported value
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: DevWebserverSG
  # Database security group
  DevDBserverSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref DevDBserverSGGN
      GroupDescription: !Ref DevDBserverSGGD
      VpcId: !ImportValue DevVPCId #this will import the exported value
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: DevDBserverSG        



Outputs:
  DevWebserverSGIDExportOutput:
    Description: Exporting Dev Webserver SG id
    Value: !Ref DevWebserverSG
    Export: 
      Name: DevWebserverSGId #pass this at ec2-instance-template
